性能测试控制变量